# rpp-old

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
docs/: Doxyfile.in
hal/: CMakeLists.txt  configure_file.cmake
hal/include/: platform.hpp  portable.h  portable.hpp  portable_types.hpp  systick.hpp
hal/include/arm_cortex_a/: mem_load.h  mmu.hpp
hal/include/gsl/: gsl_util.hpp
hal/include/xc7z/: cpu.h  cpu.hpp  mem_cpu.hpp  mem_load.h  mem_map.h  mem_mmu.hpp
hal/src/arm_cortex_a/: irq_ctrl.cpp  mem.c  mmu.cpp  portable.cpp  startup.c  startup.cpp  systick.cpp
hal/src/hosted/: portable.cpp
hal/src/xc7z/: cpu.cpp  platform.cpp
hal/templates/: portable_defs.in
hal/templates/arm_cortex_a/: link_template.ld
hal/templates/xc7z/: link.ld.in
kernel/impl/include/: portable.h
kernel/impl/src/: scheduler.cpp  thread.cpp
kernel/impl/src/hosted/: portable.cpp
kernel/impl/src/xc7z/: mem.c  portable.cpp  startup.c
kernel/include/: dynamic_span.hpp  portable.h  portable_types.h  portable_types.hpp  queue_array.hpp  rpp.hpp  scheduler.hpp  thread.hpp
kernel/include/ipp/: dynamic_span.ipp  queue_array.ipp  scheduler.ipp  thread.ipp
kernel/src/: thread.cpp
kernel/src/hosted/: portable.cpp
templates/: portable_defs.in
test/: test_sched.cpp  test_systick.cpp
